<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/records_rank"
            android:layout_height="wrap_content"
            android:id="@+id/rank_lbl"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/records_time"
            android:layout_height="wrap_content"
            android:id="@+id/time_lbl"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/records_name"
            android:layout_height="wrap_content"
            android:id="@+id/name_lbl"/>

    </LinearLayout>
</RelativeLayout>