<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/my_layout">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp"
        android:paddingHorizontal="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/endGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="35sp"/>

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/endGameText"
                android:layout_width="250dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <android.widget.Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_shape2"
            android:onClick="backMainMenu"
            android:text="@string/back_menu" />

        <android.widget.Button
            android:id="@+id/btn_tryAgain"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape2"
            android:onClick="tryAgain"

            android:text="@string/try_again" />

    </TableRow>

</LinearLayout>